--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
               <a href="page_replacement.html">Least Page used Replacement</a>
             </div>
           </li>
-          <li><a href="team.html">About Us</a></li>
+          <li><a href="team.html">About Me</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
