--- a/team.html
+++ b/team.html
@@ -24,11 +24,13 @@
                     </div>
                 </li>
                 <li><a href="team.html">About Me</a></li>
+                <li><a href="team.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     
+    <h1 class="about-us">About Us</h1>
     <h1 class="about-us">About Me</h1>
     
     <main>
